--- a/DnevnikN/src/main/resources/FXML/prepodlog.fxml
+++ b/DnevnikN/src/main/resources/FXML/prepodlog.fxml
@@ -40,7 +40,7 @@
          <items>
             <AnchorPane prefHeight="551.0" prefWidth="408.0">
                <children>
-                  <ListView layoutX="-7.0" layoutY="40.0" prefHeight="512.0" prefWidth="169.0" />
+                  <ListView fx:id="Gruppi" layoutX="-7.0" layoutY="40.0" prefHeight="512.0" prefWidth="169.0" />
                   <ToolBar prefHeight="40.0" prefWidth="162.0">
                      <items>
                         <Label alignment="CENTER" minWidth="60.0" prefHeight="27.0" prefWidth="81.0" style="&#10;" text="Группы" textAlignment="CENTER" wrapText="false">
@@ -92,7 +92,7 @@
                            </textFill>
                         </Label>
                         <Pane prefHeight="10.0" prefWidth="75.0" />
-                        <JFXButton blendMode="HARD_LIGHT" buttonType="RAISED" cache="true" onAction="#DobavPred" prefHeight="20.0" prefWidth="46.0" ripplerFill="#00803f" text="+">
+                        <JFXButton blendMode="HARD_LIGHT" buttonType="RAISED" cache="true" onAction="#DobavStud" prefHeight="20.0" prefWidth="46.0" ripplerFill="#00803f" text="+">
                            <font>
                               <Font size="18.0" />
                            </font>
